little spacing fixed

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -1092,6 +1092,22 @@ video {
   position: relative;
 }
 
+.-top-\[120px\] {
+  top: -120px;
+}
+
+.-top-\[30px\] {
+  top: -30px;
+}
+
+.-top-\[50px\] {
+  top: -50px;
+}
+
+.-top-\[70px\] {
+  top: -70px;
+}
+
 .bottom-3 {
   bottom: 0.75rem;
 }
@@ -1158,54 +1174,6 @@ video {
 
 .top-\[50px\] {
   top: 50px;
-}
-
-.-top-\[50px\] {
-  top: -50px;
-}
-
-.-top-\[40px\] {
-  top: -40px;
-}
-
-.-top-\[20px\] {
-  top: -20px;
-}
-
-.-top-\[30px\] {
-  top: -30px;
-}
-
-.-top-\[60px\] {
-  top: -60px;
-}
-
-.-top-\[70px\] {
-  top: -70px;
-}
-
-.-top-\[80px\] {
-  top: -80px;
-}
-
-.-top-\[110px\] {
-  top: -110px;
-}
-
-.-top-\[120px\] {
-  top: -120px;
-}
-
-.-top-\[150px\] {
-  top: -150px;
-}
-
-.-top-\[90px\] {
-  top: -90px;
-}
-
-.-top-\[25px\] {
-  top: -25px;
 }
 
 .z-10 {
@@ -1282,10 +1250,6 @@ video {
   margin-bottom: 0.5rem;
 }
 
-.mb-24 {
-  margin-bottom: 6rem;
-}
-
 .mb-3 {
   margin-bottom: 0.75rem;
 }
@@ -1344,6 +1308,10 @@ video {
 
 .mb-\[69px\] {
   margin-bottom: 69px;
+}
+
+.mb-\[85px\] {
+  margin-bottom: 85px;
 }
 
 .mb-\[86px\] {
@@ -1454,10 +1422,6 @@ video {
   margin-top: 30px;
 }
 
-.mb-\[85px\] {
-  margin-bottom: 85px;
-}
-
 .block {
   display: block;
 }
@@ -1555,6 +1519,10 @@ video {
   height: 478px;
 }
 
+.h-auto {
+  height: auto;
+}
+
 .h-fit {
   height: -moz-fit-content;
   height: fit-content;
@@ -1566,10 +1534,6 @@ video {
 
 .h-screen {
   height: 100vh;
-}
-
-.h-auto {
-  height: auto;
 }
 
 .w-1\/3 {
@@ -2239,6 +2203,10 @@ video {
   padding-bottom: 124px;
 }
 
+.pb-\[70px\] {
+  padding-bottom: 70px;
+}
+
 .pl-3 {
   padding-left: 0.75rem;
 }
@@ -2269,6 +2237,10 @@ video {
 
 .pr-2 {
   padding-right: 0.5rem;
+}
+
+.pr-7 {
+  padding-right: 1.75rem;
 }
 
 .pr-8 {
@@ -2309,18 +2281,6 @@ video {
 
 .pt-\[70px\] {
   padding-top: 70px;
-}
-
-.pb-20 {
-  padding-bottom: 5rem;
-}
-
-.pb-\[70px\] {
-  padding-bottom: 70px;
-}
-
-.pr-7 {
-  padding-right: 1.75rem;
 }
 
 .text-center {
@@ -2436,10 +2396,6 @@ video {
 
 .leading-\[30px\] {
   line-height: 30px;
-}
-
-.leading-\[50px\] {
-  line-height: 50px;
 }
 
 .text-black {
@@ -2695,24 +2651,24 @@ video {
     margin-bottom: 4rem;
   }
 
-  .sm\:mb-20 {
-    margin-bottom: 5rem;
+  .sm\:mb-2 {
+    margin-bottom: 0.5rem;
   }
 
-  .sm\:mb-3 {
-    margin-bottom: 0.75rem;
+  .sm\:mb-20 {
+    margin-bottom: 5rem;
   }
 
   .sm\:mb-4 {
     margin-bottom: 1rem;
   }
 
-  .sm\:mb-48 {
-    margin-bottom: 12rem;
-  }
-
   .sm\:mb-6 {
     margin-bottom: 1.5rem;
+  }
+
+  .sm\:mb-60 {
+    margin-bottom: 15rem;
   }
 
   .sm\:mb-7 {
@@ -2743,8 +2699,8 @@ video {
     margin-left: 0.5rem;
   }
 
-  .sm\:mr-10 {
-    margin-right: 2.5rem;
+  .sm\:mr-14 {
+    margin-right: 3.5rem;
   }
 
   .sm\:mr-2 {
@@ -2765,26 +2721,6 @@ video {
 
   .sm\:mt-\[-200px\] {
     margin-top: -200px;
-  }
-
-  .sm\:mb-56 {
-    margin-bottom: 14rem;
-  }
-
-  .sm\:mb-60 {
-    margin-bottom: 15rem;
-  }
-
-  .sm\:mr-14 {
-    margin-right: 3.5rem;
-  }
-
-  .sm\:mb-1 {
-    margin-bottom: 0.25rem;
-  }
-
-  .sm\:mb-2 {
-    margin-bottom: 0.5rem;
   }
 
   .sm\:block {
@@ -3074,6 +3010,10 @@ video {
     padding-left: 42px;
   }
 
+  .sm\:pr-0 {
+    padding-right: 0px;
+  }
+
   .sm\:pr-14 {
     padding-right: 3.5rem;
   }
@@ -3108,18 +3048,6 @@ video {
 
   .sm\:pt-\[30px\] {
     padding-top: 30px;
-  }
-
-  .sm\:pr-10 {
-    padding-right: 2.5rem;
-  }
-
-  .sm\:pr-7 {
-    padding-right: 1.75rem;
-  }
-
-  .sm\:pr-0 {
-    padding-right: 0px;
   }
 
   .sm\:text-2xl {
@@ -3187,10 +3115,6 @@ video {
 @media (min-width: 768px) {
   .md\:relative {
     position: relative;
-  }
-
-  .md\:-top-\[-70px\] {
-    top: 70px;
   }
 
   .md\:-top-\[70px\] {
@@ -3503,6 +3427,10 @@ video {
     display: none;
   }
 
+  .lg\:h-\[214px\] {
+    height: 214px;
+  }
+
   .lg\:h-\[401px\] {
     height: 401px;
   }
@@ -3513,14 +3441,6 @@ video {
 
   .lg\:h-\[60px\] {
     height: 60px;
-  }
-
-  .lg\:h-\[295px\] {
-    height: 295px;
-  }
-
-  .lg\:h-\[214px\] {
-    height: 214px;
   }
 
   .lg\:w-14 {
